--- a/Phone_Scraper/Phone_Scraper.csproj
+++ b/Phone_Scraper/Phone_Scraper.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Selenium.WebDriver" Version="4.16.2" />
     <PackageReference Include="SQLite" Version="3.13.0" />
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.7" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
   <ItemGroup>
