--- a/Phone_Scraper/Phone_Scraper.csproj
+++ b/Phone_Scraper/Phone_Scraper.csproj
@@ -10,7 +10,9 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.57" />
     <PackageReference Include="Jint" Version="2.11.58" />
+    <PackageReference Include="Leaf.xNet" Version="5.2.10" />
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.16.2" />
     <PackageReference Include="SQLite" Version="3.13.0" />
@@ -27,6 +29,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Driver\geckodriver.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="SeedUrls.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
