--- a/Phone_Scraper/Phone_Scraper.csproj
+++ b/Phone_Scraper/Phone_Scraper.csproj
@@ -8,10 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Utility\UserAgents.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.57" />
     <PackageReference Include="Jint" Version="2.11.58" />
     <PackageReference Include="Leaf.xNet" Version="5.2.10" />
@@ -29,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="UserAgents.cs">
+    <None Include="Utility\UserAgents.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
